--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/management-ssh.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/management-ssh.j2
@@ -7,6 +7,20 @@
 {% if management_ssh is arista.avd.defined %}
 
 ### Management SSH
+{%     if management_ssh.authentication is arista.avd.defined %}
+
+#### Authentication Settings
+
+| Authentication protocols | Empty passwords |
+| ------------------------ | --------------- |
+{%         if management_ssh.authentication.protocols is arista.avd.defined  %}
+{%             set protocols = management_ssh.authentication.protocols | join(", ") %}
+{%         else %}
+{%             set protocols = 'keyboard-interactive, public-key' %}
+{%         endif %}
+{%         set empty_passwords = management_ssh.authentication.empty_passwords | arista.avd.default('auto') %}
+| {{ protocols }} | {{ empty_passwords }} |
+{%     endif %}
 {%     if management_ssh.access_groups is arista.avd.defined %}
 
 #### IPv4 ACL
