--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/port-channel-interfaces.j2
@@ -29,14 +29,14 @@
 {%             set mode = port_channel_interface.switchport.mode | arista.avd.default('-') %}
 {%             if port_channel_interface.switchport.access_vlan is arista.avd.defined or
                 port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
-{%                 set vlans = [] %}
+{%                 set switchport_vlans = [] %}
 {%                 if port_channel_interface.switchport.access_vlan is arista.avd.defined %}
-{%                     do vlans.append(port_channel_interface.switchport.access_vlan) %}
+{%                     do switchport_vlans.append(port_channel_interface.switchport.access_vlan) %}
 {%                 endif %}
 {%                 if port_channel_interface.switchport.trunk.allowed_vlan is arista.avd.defined %}
-{%                     do vlans.extend(port_channel_interface.switchport.trunk.allowed_vlan | arista.avd.range_expand | map('int')) %}
+{%                     do switchport_vlans.extend(port_channel_interface.switchport.trunk.allowed_vlan | arista.avd.range_expand | map('int')) %}
 {%                 endif %}
-{%                 set vlans = vlans | arista.avd.list_compress %}
+{%                 set switchport_vlans = switchport_vlans | arista.avd.list_compress %}
 {%             endif %}
 {%             if port_channel_interface.switchport.trunk.native_vlan_tag is arista.avd.defined(true) %}
 {%                 set native_vlan = "tag" %}
@@ -48,12 +48,12 @@
 {%             set lacp_fallback_mode = port_channel_interface.lacp_fallback_mode | arista.avd.default("-") %}
 {%             set mlag = port_channel_interface.mlag | arista.avd.default("-") %}
 {%             set esi = port_channel_interface.evpn_ethernet_segment.identifier | arista.avd.default("-") %}
-| {{ port_channel_interface.name }} | {{ description }} | {{ mode }} | {{ vlans | arista.avd.default('-') }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
+| {{ port_channel_interface.name }} | {{ description }} | {{ mode }} | {{ switchport_vlans | arista.avd.default('-') }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
 {# TODO: AVD6.0 Below elif block should be removed once the deprecated keys are removed in AVD6.0 #}
 {%         elif port_channel_interface.type is arista.avd.defined("switched") %}
 {%             set description = port_channel_interface.description | arista.avd.default("-") %}
 {%             set mode = port_channel_interface.mode | arista.avd.default('-') %}
-{%             set vlans = port_channel_interface.vlans | arista.avd.default('-') %}
+{%             set switchport_vlans = port_channel_interface.vlans | arista.avd.default('-') %}
 {%             if  port_channel_interface.native_vlan_tag is arista.avd.defined(true) %}
 {%                 set native_vlan = "tag" %}
 {%             else %}
@@ -64,7 +64,7 @@
 {%             set lacp_fallback_mode = port_channel_interface.lacp_fallback_mode | arista.avd.default("-") %}
 {%             set mlag = port_channel_interface.mlag | arista.avd.default("-") %}
 {%             set esi = port_channel_interface.evpn_ethernet_segment.identifier | arista.avd.default("-") %}
-| {{ port_channel_interface.name }} | {{ description }} | {{ mode }} | {{ vlans }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
+| {{ port_channel_interface.name }} | {{ description }} | {{ mode }} | {{ switchport_vlans }} | {{ native_vlan }} | {{ trunk_groups }} | {{ lacp_fallback_timeout }} | {{ lacp_fallback_mode }} | {{ mlag }} | {{ esi }} |
 {%         endif %}
 {%     endfor %}
 {# Encapsulation #}
