--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/traffic-policies.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/traffic-policies.j2
@@ -85,7 +85,7 @@ traffic-policies
 {%                                     set protocol_neighbors_cli = protocol_neighbors_cli ~ ' enforce ttl maximum-hops' %}
 {%                                 endif %}
          {{ protocol_neighbors_cli }}
-{%                             elif protocol.protocol | lower == 'bgp' %}
+{%                             else %}
          protocol bgp
 {%                             endif %}
 {%                             break %}
